# mixtape-causalpy

./: AGENTS.md  LICENSE  README.md  REPO_PLAN.md  environment.yml  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 05_matching.ipynb  06_regression_discontinuity.ipynb  07_instrumental_variables.ipynb  09_difference_in_differences.ipynb  10_synthetic_control.ipynb
proposals/: README.md  proposal_matching.md  proposal_panel_fe.md  proposal_triple_diff.md
src/mixtape_causalpy/: __init__.py  data.py
